--- a/templates/bio.html
+++ b/templates/bio.html
@@ -63,12 +63,12 @@
         		</button>
 		    </div>	    
 		    <ul  id="myCollapsingList" class ="nav navbar-nav collapse navbar-collapse navbar-right"> 
-				 <li><a href="bio.html">About</a></li>
-			     <li><a href="productions.html">Productions</a></li>
-			     <li><a href="compositions.html">Compositions</a></li>
-			     <li><a href="guitar.html">Guitar</a></li>
-			     <li><a href="transcriptions.html">Transcriptions</a></li>
-			     <li><a href="contact.html">Contact</a></li>
+				 <li><a href="/templates/bio.html">About</a></li>
+			     <li><a href="/templates/productions.html">Productions</a></li>
+			     <li><a href="/templates/compositions.html">Compositions</a></li>
+			     <li><a href="/templates/guitar.html">Guitar</a></li>
+			     <li><a href="/templates/transcriptions.html">Transcriptions</a></li>
+			     <li><a href="/templates/contact.html">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
