--- a/templates/bio.html
+++ b/templates/bio.html
@@ -116,4 +116,7 @@
 <script src='js/controller.js'></script>
 <script src='js/service.js'></script>
 </body>
+<script src='http://code.jquery.com/jquery.min.js'></script>
+<script src='bower_components/bootstrap/js/bootstrap.min.js'></script>
+
 </html>
