--- a/templates/bio.html
+++ b/templates/bio.html
@@ -6,7 +6,7 @@
 
 	<div id= "image1" class="box"><h3> A Brief History </h3>
 	<figure><figcaption>photo: Colm Keating</figcaption>
-		<img id="pic1" src="images/Graham_Godin.jpg" alt="GrahamGodin" width="250" height="217">
+		<img id="pic1" src="/images/Graham_Godin.jpg" alt="GrahamGodin" width="250" height="217">
 	
 	</figure>
 		<p>Born in Dublin, Ireland, in 1974, Graham Dunne is a multi-talented and very versatile musician. Until very recently, Graham spent a great number of years living in County Clare and while there, was very much involved in the Irish Traditional music scene, having had the pleasure of accompanying a vast array of wonderfully talented local musicians during that time.</p>
