--- a/templates/bio.html
+++ b/templates/bio.html
@@ -28,3 +28,9 @@
   data-width="450"
   data-show-faces="true">
 </div>-->
+
+	<div id= "footer2">
+		<h6>Website by Gramsham Multi Media Productions. Copyright © 2017. Graham Dunne. All Rights Reserved.</h6>
+	</div>
+
+  
