--- a/templates/bio.html
+++ b/templates/bio.html
@@ -1,10 +1,15 @@
+<title>About | Graham Dunne</title>
+
 <div class="container">
 
 	<div class="vertical-center-row">
 
 		<div align="center">
 
-	<div id= "image1" class="box"><h3> A Brief History </h3>
+			<div id= "image1" class="box">
+
+		<h3> A Brief History </h3>
+
 	<figure><figcaption>photo: Colm Keating</figcaption>
 		<img id="pic1" src="/images/Graham_Godin.jpg" alt="GrahamGodin" width="250" height="217">
 	
